[DAQ-4070] Replace ObservableComponent with custom listener class in ScanPathEditor
Change-Id: I5854177faa43452625e1d037a8c36b5164ea8d8f